--- a/style.css
+++ b/style.css
@@ -138,8 +138,22 @@
 }
 .cte-btn:hover { background-color: #b38b59; color: #1a1a1a; }
 
-.file-input-wrapper { position: relative; overflow: hidden; display: inline-block; }
-.file-input-wrapper input[type=file] { font-size: 100px; position: absolute; left: 0; top: 0; opacity: 0; cursor: pointer; }
+.file-input-wrapper { 
+    position: relative; 
+    overflow: hidden; 
+    display: inline-block; 
+    cursor: pointer;
+}
+.file-input-wrapper input[type=file] { 
+    position: absolute; 
+    left: 0; 
+    top: 0; 
+    width: 100%;
+    height: 100%;
+    opacity: 0; 
+    cursor: pointer; 
+    z-index: 10;
+}
 
 /* 地图容器 */
 .map-container {
@@ -377,6 +391,7 @@
     display: inline-flex;
     align-items: center;
     gap: 5px;
+    cursor: pointer;
 }
 
 .avatar-upload-btn input[type="file"] {
@@ -387,7 +402,7 @@
     height: 100%;
     opacity: 0;
     cursor: pointer;
-    font-size: 0;
+    z-index: 10;
 }
 
 .avatar-delete-btn {
